--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-* {
-  box-sizing: border-box;
-}
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
 
 body {
-
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
