--- a/app/ui/dashpoard/sidebar/sidebar.module.css
+++ b/app/ui/dashpoard/sidebar/sidebar.module.css
@@ -40,7 +40,7 @@
     gap: 10px;
     cursor: pointer;
     border-radius: 10px;
-    background: none;
+    background: crimson;
     border: none;
     width: 100%;
     color:white;
