--- a/app/ui/login/login.module.css
+++ b/app/ui/login/login.module.css
@@ -34,3 +34,23 @@
   cursor: pointer;
   border-radius: 5px;
 }
+/* login.module.css */
+
+/* Spinner Styles */
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
