--- a/app/ui/dashpoard/sidebar/sidebar.module.css
+++ b/app/ui/dashpoard/sidebar/sidebar.module.css
@@ -1,12 +1,14 @@
 .container{
     position:sticky;
     top: 40px;
+    height: 100%;
+    padding-bottom: 30px;
 }
 .user{
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 .userImage{
     border-radius: 50%;
@@ -44,6 +46,7 @@
     border: none;
     width: 100%;
     color:white;
+    margin-top: 10px;
   }
   .logout:hover{
     background: #2e374a;
