--- a/app/ui/dashpoard/products/addproduct/addproduct.module.css
+++ b/app/ui/dashpoard/products/addproduct/addproduct.module.css
@@ -1,37 +1,78 @@
 .container {
+  display: flex;
+  gap: 50px;
+  margin-top: 20px;
+
+}
+.infoContainer {
+  flex: 1;
+  background-color: var(--bgSoft);
+  color: var(--textSoft);
+  font-weight: bold;
+  padding: 20px;
+  border-radius: 10px;
+  height: max-content;
+  margin:  5px ;
+  width:100%;
+}
+.imgContainer {
+  width: 100%;
+  height: 300px;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.formContainer {
+  flex: 3;
   background-color: var(--bgSoft);
   padding: 20px;
-  margin-top: 20px;
   border-radius: 10px;
 }
 .form {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
 }
 .form input,
 .form textarea,
 .form select {
-  padding: 30px;
-  background: var(--bg);
-  color: var(--text);
+  padding: 20px;
   border: 2px solid #2e374a;
   border-radius: 5px;
-  margin-bottom: 30px;
+  background: var(--bg);
+  color: var(--text);
+  margin: 10px 0;
 }
-.form input,
-.form select {
-  width: 45%;
-}
-.form textarea {
-  width: 100%;
+.form label {
+  font-size: 12px;
 }
 .form button {
   width: 100%;
-  padding: 30px;
+  padding: 20px;
   background-color: teal;
   color: var(--text);
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
+  margin-top: 20px;
+}
+.AddApartmentBtn {
+  width: 100%;
+  padding: 20px;
+  background-color: teal;
+  color: var(--text);
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.successMessage {
+  color: green;
+  font-weight: bold;
+}
+
+.errorMessage {
+  color: red;
+  font-weight: bold;
 }
